--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "bus-backend",
   "version": "1.0.0",
@@ -5,6 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+  "node": "18.x"
   },
   "keywords": [],
   "author": "",
